# LMConcealers

./: .gitignore  .gitmodules  README.md  data.py  eval.py  probe.py  prompts.py  sync_data.py  viz.py
configs/: private_vars.yaml  project_vars.yaml
llm-utils/: .gitignore  README.md  create_examples.py  infer.py  push_to_hub.py  train.py
llm-utils/configs/: README.md  config.env  create_env_file.py  private_vars.yaml  project_vars.yaml
llm-utils/examples/: README.md  generate_example_data.py
llm-utils/inference/: batch_size_determination.py  huggingface_inference.py  inference_utils.py  openai_inference.py  vllm_inference.py
llm-utils/setup/: README.md  pyproject.toml  requirements.txt
llm-utils/tests/: README.md  test_all.sh
llm-utils/tests/example_data/: load_data.sh  load_training_datasets.sh  (+1 more)
llm-utils/training/: data.py  model.py  trainers.py
llm-utils/utils/: __init__.py  fundamental.py  hash_handling.py  parameter_handling.py  vlm_utils.py
scripts/: adversarial_inference.sh  adversarial_train.sh  create_wiki_data.sh  gather_wiki_data.sh  run_all.sh  run_clf.sh  run_inference.sh  run_inference_openai.sh  run_locked_inference.sh  run_locked_model_inference.sh  run_probe_inference.sh  setup_expertqa.sh
scripts/clf/: basic.sh  different_all.sh  different_model_prompting.sh  different_topic_prompting.sh  locked_vs_guardrail.sh  run_all.sh  same_topic_dpo.sh  same_topic_locked.sh  same_topic_prompting.sh  same_topic_prompting_max.sh  token_ablation.sh
scripts/locking/: dpo.sh
setup/: README.md  pyproject.toml
utils/: parameter_handling.py
(+36 files in other folders)
