[project]
name = "LanguageModelLiars"
version = "0.1.0"
description = "Can we catch when LMs are hiding things from us?"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "click>=8.2.1",
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "evaluate>=0.4.6",
    "gdown>=5.2.0",
    "nltk>=3.9.2",
    "pandas>=2.3.2",
    "peft>=0.18.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "wikipedia-api>=0.8.1",
]
