[project]
name = "llm-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.10.1",
    "bitsandbytes>=0.43.2",
    "click==8.1.7",
    "datasets==3.5.0",
    "flashinfer-python>=0.4.1",
    "gdown==5.2.0",
    "numpy==1.26.4",
    "peft==0.15.1",
    "scikit-image==0.25.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.56.2",
    "trl>=0.23.0",
    "vllm==0.10.0",
    "wandb==0.21.0",
]
